--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.8.1
 Django==4.2.20
 django-formtools==2.5.1
+gunicorn==23.0.0
+packaging==24.2
 sqlparse==0.5.3
 typing_extensions==4.12.2
